--- a/quicksnapr/static/styles/application.css
+++ b/quicksnapr/static/styles/application.css
@@ -12,8 +12,8 @@
 }
 
 /* html, body */
-html { box-sizing:border-box; min-height:100%; width:100%; background:url(/images/back.jpg) no-repeat fixed; -webkit-background-size:100% 100%; overflow:auto; }
-body { margin:0; padding:0; height:100%; /*width:100%;*/ width:1300px; font-family:'Open Sans Condensed', sans-serif; }
+html { box-sizing:border-box; min-height:100%; width:100%; background:url(/images/back.jpg) no-repeat; background-size:cover; overflow:auto; }
+body { margin:0; padding:0; height:100%; font-family:'Open Sans Condensed', sans-serif; }
 
 /* general resets */
 ::selection{background:yellow;color:#040707;text-shadow:none}
@@ -43,15 +43,14 @@ figure { border:0; border-radius:0; padding:0; background:white; cursor:pointer;
 canvas { width:128px; display:block; }
 
 canvas div, figure div { position:absolute; left:-9999px; display:block; }
-/*canvas.selected,*/ figure.selected { border-color:#7f0101; -webkit-transform:rotate(360deg) scale(2); z-index:2; opacity:1; box-shadow:0 1px 2px rgba(0,0,0,0.2), 0 2px 2px rgba(0,0,0,0.05), 0 1px 3px rgba(212,135,13,.3); top:30px; left:60px; }
+figure.selected { border-color:#7f0101;z-index:2; opacity:1; box-shadow:0 1px 2px rgba(0,0,0,0.2), 0 2px 2px rgba(0,0,0,0.05), 0 1px 3px rgba(212,135,13,.3); }
 canvas.ease-in, figure.ease-in { -webkit-animation:ease-in .3s; -webkit-animation-iteration-count:1; }
 canvas.ease-out, figure.ease-out { -webkit-animation:ease-out .5s; -webkit-animation-iteration-count:1; opacity:0; }
 canvas.non, figure.non { opacity:.6; }
 canvas:hover, canvas:active, figure:hover, figure:active { opacity:1; }
-/*canvas.selected div, figure.selected div { left:-61px; bottom:-4px; padding:5px; z-index:3; -webkit-transform:scale(.5); width:247px; }*/
 
 /* actions per image */
-#actions { width:120px; height:100%; /*position:absolute; bottom:0; padding:40px 50px; z-index:10; background:rgba(0,0,0,0.15); box-shadow:0 -4px 0 rgba(0,0,0,0.25); background:rgba(0,0,0,0.15);*/ margin:0; position:fixed; top:0; padding:30px 20px; z-index:3; background:rgba(0,0,0,0.2); box-shadow:5px 0 0 rgba(255,255,255,0.1); display:none; }
+#actions { width:120px; height:100%; margin:0; position:fixed; top:0; padding:30px 20px; z-index:3; background:rgba(0,0,0,0.2); box-shadow:5px 0 0 rgba(255,255,255,0.1); display:none; }
 input.btn, .action, a.action:visited { display:block; text-decoration:none; border:0; background:green; margin:0 0 20px; position:absolute; display:inline-block; position:relative; cursor:pointer; border-radius:4px; float:left; color:white; padding:.15em .65em; font-size:100%; font-family:'Open Sans Condensed', sans-serif; text-shadow:0 1px 0 rgba(0,0,0,0.35); box-shadow:0 2px 0 rgba(0,0,0,0.15); border:1px solid #487306; font-weight:bold; line-height:1.6; position:relative; width:60px;
 background: -webkit-gradient(linear, 0 0, 0 bottom, from(#40b501), to(#5b8b10));
 background: -webkit-linear-gradient(#40b501, #5b8b10);
@@ -65,48 +64,96 @@ background: -webkit-linear-gradient(#4fb9e5, #217eae);
 .btn.delete, .action.delete { border-color:#5d0c01;
 background: -webkit-gradient(linear, 0 0, 0 bottom, from(#db3908), to(#8e1201));
 background: -webkit-linear-gradient(#db3908, #8e1201);
-margin:0; }
-
-.pad, #snaps.pad { left:150px; }
+margin:auto; }
 
 /* footer */
 footer { font-size:12px; position:fixed; bottom:3%; right:2%; opacity:.75; z-index:1; text-align:right; text-shadow:0 1px 0 rgba(0,0,0,0.5); color:white; }
 
 /* media queries */
-@media screen and (min-width:450px) {
+@media screen and (min-width:320px) {
 
-	figure { float:left; margin:0 20px 20px 0; }
+  body {
+  }
 
-}
-
-@media screen and (min-width:750px) {
-
-	header h1 { font-size:2.75em; }
-	section { padding:0; width:100%; }
-	/*#container { width:730px; margin:120px 0 0 50px; }*/
-
-}
-
-@media screen and (min-width:900px) {
-	/*#container { width:730px; margin:120px 0 0 50px; position:absolute; top:-120px; right:0; }*/
-}
-
-@media screen and (min-width:1400px) {
-
-	#snaps { width:480px; }
-
-}
-
-@media screen and (min-width:1350px) {
-
-	#container { position:fixed; right:60px; top:50px; margin:0; }
-	body { width:100%; border:0; }
-
-}
-
-@media screen and (min-width:1600px) {
-
-	/*#snaps { width:700px; }*/
+  header {
+    display: none;
+  }
+  figure { 
+    float:left;
+    margin:0 20px 20px 0;
+    width: 128px;
+    height: 96px;
+  }
+  
+  figure.non { display: none; }
+  
+  figure.selected { width: 100%; margin: 0; }
+  figure.selected canvas { width: 100%; }
+  
+  .cf {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    max-height: 100vh;
+    text-align: center;
+    display: -webkit-flex;
+    -webkit-flex-direction: column;
+  }
+  
+  #container {
+    display: block;
+    margin: 0;
+    top: auto;
+    left: auto;
+    width: 100%;
+    position: static;
+  }
+  
+  #container:after {
+    display: none;
+  }
+  
+  #container video {
+    width: 100%;
+    height: 100%;
+  }
+  
+  #snaps {
+    display: -webkit-flex;
+    -webkit-flex-wrap: wrap;
+    -webkit-justify-content: center;
+    position: static;
+    overflow-y: auto;
+    -webkit-flex: 1;
+    flex: 1;
+    width: 100%;
+    box-sizing: border-box;
+    left: 0;
+    text-align: center;
+    margin: 0;
+    height: 1px;
+    padding: 0;
+  }
+  
+  #snaps.pad {
+    left: 0;
+  }
+  
+  #actions {
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    background-color: rgba(0,0,0,0.3);
+    width: 100%;
+    height: auto;
+    padding: 1em;
+    position: static;
+  }
+  
+  .action {
+    margin: auto;
+    padding: 0.5em 1em;
+    -webkit-flex: auto;
+  }
 
 }
 
