Lots of fixes and styling for mobile

--- a/quicksnapr/static/styles/application.css
+++ b/quicksnapr/static/styles/application.css
@@ -12,7 +12,7 @@
 }
 
 /* html, body */
-html { box-sizing:border-box; min-height:100%; width:100%; background:url(/images/back.jpg) no-repeat; background-size:cover; overflow:auto; }
+html { box-sizing:border-box; min-height:100%; width:100%; overflow:auto; }
 body { margin:0; padding:0; height:100%; font-family:'Open Sans Condensed', sans-serif; }
 
 /* general resets */
@@ -31,7 +31,7 @@ h1 img { position:relative; top:7px; }
 section { padding:0 30px; position:relative; z-index:2; }
 
 /* main stuffs */
-#container { cursor:pointer; width:730px; border-radius:0; border:5px solid white; background:white; margin:110px auto 0; box-shadow:0 1px 1px rgba(0,0,0,0.2), 0 2px 2px rgba(0,0,0,0.1), 0 3px 4px rgba(0,0,0,0.05); /*position:relative;*/ position:absolute; top:-106px; right:50px; z-index:1; }
+#container { cursor:pointer; position:absolute; background-color: black; z-index:1; }
 #container:active { border-color:#d4870d; }
 #container:after { content:"Click above to take some screenshots."; text-shadow:0 1px 0 rgba(0,0,0,0.15), 0 1px 2px rgba(0,0,0,0.05), 0 2px 3px rgba(0,0,0,0.2); font-size:150%; padding:0; color:white; display:block; background:transparent url(/images/arrow.png) no-repeat bottom right; height:65px; width:330px; position:absolute; bottom:-92px; left:0; }
 #done { display:none; }
@@ -39,32 +39,66 @@ video { display:block; width:100%; position:relative; z-index:1; }
 
 /* rendered screencaps */
 #snaps { margin:5em 0 0; padding:0 0 5em; text-align:center; width:330px; position:relative; left:50px; }
-figure { border:0; border-radius:0; padding:0; background:white; cursor:pointer; display:block; width:128px; margin:0 20px 20px 0; background:white; box-shadow:0 1px 2px rgba(0,0,0,0.2), 0 2px 2px rgba(0,0,0,0.05); position:relative; -webkit-transition:all .3s ease-in-out; z-index:1; float:right; opacity:.6; }
-canvas { width:128px; display:block; }
+figure { border:0; border-radius:0; padding:0; background:white; cursor:pointer; display:block; width:128px; margin:0 20px 20px 0; background:white; box-shadow:0 1px 2px rgba(0,0,0,0.2), 0 2px 2px rgba(0,0,0,0.05); position:relative; z-index:1; float:right;  }
+canvas { width:128px; height: 96px; display:block; }
 
 canvas div, figure div { position:absolute; left:-9999px; display:block; }
 figure.selected { border-color:#7f0101;z-index:2; opacity:1; box-shadow:0 1px 2px rgba(0,0,0,0.2), 0 2px 2px rgba(0,0,0,0.05), 0 1px 3px rgba(212,135,13,.3); }
-canvas.ease-in, figure.ease-in { -webkit-animation:ease-in .3s; -webkit-animation-iteration-count:1; }
-canvas.ease-out, figure.ease-out { -webkit-animation:ease-out .5s; -webkit-animation-iteration-count:1; opacity:0; }
+
 canvas.non, figure.non { opacity:.6; }
 canvas:hover, canvas:active, figure:hover, figure:active { opacity:1; }
 
 /* actions per image */
 #actions { width:120px; height:100%; margin:0; position:fixed; top:0; padding:30px 20px; z-index:3; background:rgba(0,0,0,0.2); box-shadow:5px 0 0 rgba(255,255,255,0.1); display:none; }
-input.btn, .action, a.action:visited { display:block; text-decoration:none; border:0; background:green; margin:0 0 20px; position:absolute; display:inline-block; position:relative; cursor:pointer; border-radius:4px; float:left; color:white; padding:.15em .65em; font-size:100%; font-family:'Open Sans Condensed', sans-serif; text-shadow:0 1px 0 rgba(0,0,0,0.35); box-shadow:0 2px 0 rgba(0,0,0,0.15); border:1px solid #487306; font-weight:bold; line-height:1.6; position:relative; width:60px;
+button.btn, input.btn, .action, a.action:visited { display:block; text-decoration:none; border:0; background:green; margin:0 0 20px; position:absolute; display:inline-block; position:relative; cursor:pointer; border-radius:4px; float:left; color:white; padding:.15em .65em; font-size:100%; font-family:'Open Sans Condensed', sans-serif; text-shadow:0 1px 0 rgba(0,0,0,0.35); box-shadow:0 2px 0 rgba(0,0,0,0.15); border:1px solid #487306; font-weight:bold; line-height:1.6; position:relative; width:60px;
 background: -webkit-gradient(linear, 0 0, 0 bottom, from(#40b501), to(#5b8b10));
 background: -webkit-linear-gradient(#40b501, #5b8b10);
 }
-input.btn:hover, .action:hover { box-shadow:0 2px 0 rgba(0,0,0,0.35); }
-input.btn:active, .action:active { box-shadow:0 1px 3px rgba(0,0,0,0.45) inset; padding:.2em .65em .1em; top:1px; }
-.btn.share, .action.share { border-color:#065a85;
-background: -webkit-gradient(linear, 0 0, 0 bottom, from(#4fb9e5), to(#217eae));
-background: -webkit-linear-gradient(#4fb9e5, #217eae);
+button.btn:hover, input.btn:hover, .action:hover { box-shadow:0 2px 0 rgba(0,0,0,0.35); }
+button.btn:active, input.btn:active, .action:active { box-shadow:0 1px 3px rgba(0,0,0,0.45) inset; padding:.2em .65em .1em; top:1px; }
+.btn.share, .action.share { 
+  width: auto;
+  margin: 20px;
+  border-color:#065a85;
+  background: -webkit-gradient(linear, 0 0, 0 bottom, from(#4fb9e5), to(#217eae));
+  background: -webkit-linear-gradient(#4fb9e5, #217eae);
 }
 .btn.delete, .action.delete { border-color:#5d0c01;
 background: -webkit-gradient(linear, 0 0, 0 bottom, from(#db3908), to(#8e1201));
 background: -webkit-linear-gradient(#db3908, #8e1201);
 margin:auto; }
+
+
+#root {
+  -webkit-perspective: 800;
+  -webkit-transform-origin: center center;
+  height: 100%;
+}
+
+#root #container {
+  -webkit-transform: rotateY(0deg);
+  -webkit-backface-visibility: hidden;
+  -webkit-transition: all 0.2s ease-in-out, opacity 0.2s ease-in-out;
+}
+
+#root #control {
+  -webkit-transform: rotateY(180deg);
+  -webkit-backface-visibility: hidden;
+  -webkit-transition: -webkit-transform 0.2s ease-in-out, opacity 0.2s ease-in-out;
+  opacity: 0;
+}
+
+#root.list #container {
+  -webkit-transform: rotateY(-180deg);
+  -webkit-backface-visibility: hidden;
+  opacity: 0;
+}
+
+#root.list #control {
+  -webkit-transform: rotateY(0deg);
+  -webkit-backface-visibility: hidden;
+  opacity: 1;
+}
 
 /* footer */
 footer { font-size:12px; position:fixed; bottom:3%; right:2%; opacity:.75; z-index:1; text-align:right; text-shadow:0 1px 0 rgba(0,0,0,0.5); color:white; }
@@ -72,12 +106,10 @@ footer { font-size:12px; position:fixed; bottom:3%; right:2%; opacity:.75; z-ind
 /* media queries */
 @media screen and (min-width:320px) {
 
-  body {
-  }
-
   header {
     display: none;
   }
+  
   figure { 
     float:left;
     margin:0 20px 20px 0;
@@ -87,7 +119,7 @@ footer { font-size:12px; position:fixed; bottom:3%; right:2%; opacity:.75; z-ind
   
   figure.non { display: none; }
   
-  figure.selected { width: 100%; margin: 0; }
+  figure.selected { width: 100%; margin: 0; height: 100%; }
   figure.selected canvas { width: 100%; }
   
   .cf {
@@ -103,10 +135,12 @@ footer { font-size:12px; position:fixed; bottom:3%; right:2%; opacity:.75; z-ind
   #container {
     display: block;
     margin: 0;
-    top: auto;
-    left: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     width: 100%;
-    position: static;
+    position: absolute;
   }
   
   #container:after {
@@ -124,14 +158,13 @@ footer { font-size:12px; position:fixed; bottom:3%; right:2%; opacity:.75; z-ind
     -webkit-justify-content: center;
     position: static;
     overflow-y: auto;
-    -webkit-flex: 1;
     flex: 1;
     width: 100%;
+    height: auto;
     box-sizing: border-box;
     left: 0;
     text-align: center;
     margin: 0;
-    height: 1px;
     padding: 0;
   }
   
@@ -139,32 +172,28 @@ footer { font-size:12px; position:fixed; bottom:3%; right:2%; opacity:.75; z-ind
     left: 0;
   }
   
-  #actions {
+  #actions.show {
     display: -webkit-flex;
+  }
+  
+  #actions {
+    display: none;
     -webkit-flex-direction: row;
     background-color: rgba(0,0,0,0.3);
     width: 100%;
     height: auto;
     padding: 1em;
-    position: static;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: auto;
   }
   
   .action {
-    margin: auto;
+    margin: 10px;
     padding: 0.5em 1em;
     -webkit-flex: auto;
   }
 
-}
-
-/* animations */
-@-webkit-keyframes ease-in
-{
-	0% { opacity:0; }
-	100% { opacity:.5; }
-}
-@-webkit-keyframes ease-out
-{
-	0% { opacity:1; }
-	100% { opacity:0; }
 }
