--- a/quicksnapr/static/styles/application.css
+++ b/quicksnapr/static/styles/application.css
@@ -57,9 +57,50 @@ background: -webkit-gradient(linear, 0 0, 0 bottom, from(#db3908), to(#8e1201));
 background: -webkit-linear-gradient(#db3908, #8e1201);
 margin:auto; }
 
+@-webkit-keyframes flash {
+  0% {
+    -webkit-filter: brightness(40);
+  }
+  4% {
+    -webkit-filter: brightness(3);
+  }
+  100% {
+    -webkit-filter: brightness(1);
+  }
+}
+
+.flash video {
+  -webkit-filter: brightness(1);
+  -webkit-animation: flash 1.2s cubic-bezier(0.000, 1.105, 0.450, 0.940) normal;
+}
+
 #fallbackcamera {
   margin: auto;
   text-align: center;
+}
+
+#actionbar {
+  background-color: black;
+}
+
+#toggle {
+  z-index: 100;
+  width: 36px;
+  height: 36px;
+  margin: 2px;
+  padding: 0;
+  background-color: rgba(0,0,0,0);
+  color: black;
+  border: none;
+  position: fixed;
+  top:0;
+  font-size: 2em;
+  left:0;
+  -webkit-transition: background-color 0.2s ease-in-out;
+}
+
+#toggle:active {
+  background-color: rgba(0,0,0,0.4);
 }
 
 #camerainput {
@@ -205,3 +246,31 @@ figure.selected canvas { width: 640px; height: 480px; }
   padding: 0.5em 1em;
   -webkit-flex: auto;
 }
+
+@font-face {
+  font-family: 'typicons';
+  src: url('/images/typicons.eot');
+  src: url('/images/typicons.eot?#iefix') format('embedded-opentype'),
+       url('/images/typicons.woff') format('woff'),
+       url('/images/typicons.ttf') format('truetype'),
+       url('/images/typicons.svg#typicons') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+/* ::before psuedo-selector inserts and styles icon */
+.typcn::before {
+  font-family: 'typicons';
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  height: 1em;
+  font-size: 1em;
+  text-align: center;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+}
+</style>
